--- a/src/components/carousel/carousel.mod.scss
+++ b/src/components/carousel/carousel.mod.scss
@@ -56,6 +56,14 @@
   width: 100%;
   height: 33.33%;
 
+  opacity: 1;
+  transition: all 0.8s ease;
+
+  &.nhhh {
+
+    opacity: 0.2;
+   }
+
 }
 
 .imageContainer {
